VERSION HISTORY

version 0.4 (in development):
  remaning:
    - add reference type filters for access rules?
    - document new features
    - regression tests?
  done:
    - filters allows patterns to match on supertypes and basic class attributes
    - severity levels allow rules to generate warnings instead of errors
    - XML reporting
    - message rules
    - "regex" deprecated in favor of "class" (will make future features more readable)
    - ForEach now checks more than just the primary classes
    - better-structured event callbacks (inching closer to IDE integration)
    - Macker now uses BCEL for class parsing
    - parsing for superclass, interfaces, access modifiers
    - parsing distinguishes different types of signature-level reference
    - Macker now forces validation against its internal DTD
    - verbose output shows classes in sorted order
    - running under Java 1.4 no longer generates "major version" warning messages

version 0.3.1:
    - added a few examples
    - fixed broken links in docs
    - fixed output omission in non-forked ant task

version 0.3:
    - Macker now detects API-only accesses of other classes
    - rulesets now support input class subsetting
    - access rules now support custom error messages
    - Ant task supports custom classpath without forking
    - vast performance improvements through better regex caching
    - much-improved API for calling Macker from Java
    - addReachableClasses supports dynamic primary class detection
    - Macker now won't stop after the first ruleset that fails
    - bug fix for vars containing other vars
    - added void to primitive types (now necessary b/c of API parsing)
    - numerous output formatting tweaks (getting readable!)

version 0.2:
    - Macker really works
    
version 0.1:
    - Macker sorta works

version 0.0:
    - Macker doesn't work

___________________________

LIKELY FUTURE FEATURES
(with wild guesses at version numbers)
